@@ -1,19 +1,37 @@
 plugins {
-    id 'java'
+    id 'application'
+    id 'org.openjfx.javafxplugin' version '0.1.0'
+    id 'org.beryx.jlink' version '3.0.0'
 }
-
-group = 'org.example'
-version = '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    implementation 'com.github.javaparser:javaparser-symbol-solver-core:3.25.5'
 }
 
-test {
-    useJUnitPlatform()
+javafx {
+    version = "21"
+    modules = [ 'javafx.controls', 'javafx.fxml' ]
+    //platform = 'windows'
+}
+
+compileJava {
+    options.compilerArgs.addAll(['--enable-preview'])
+}
+
+application {
+    applicationDefaultJvmArgs = ['--enable-preview']
+    mainModule = 'javaLearnGui.main'
+    mainClass = 'org.openjfx.MainApp'
+}
+
+jlink {
+    targetPlatform('linux', '/usr/lib/jvm/java-21-openjdk')
+    //targetPlatform('windows', '/usr/lib/jvm/java-21-windows')
+    launcher {
+        name = 'javaLearnGui'
+    }
 }
